--- a/src/index.css
+++ b/src/index.css
@@ -1,7 +1,3 @@
-@tailwind base;
-@tailwind components;
-@tailwind utilities;
-
 html,
 body {
   margin: 0 3em;
@@ -168,17 +164,26 @@ footer {
 
   .get-data {
     margin-top: 2em;
+    display: flex;
+    flex-direction: column;
+    gap: 1em;
   }
 
   .get-email-input {
     height: 5%;
+    border-radius: 1em;
   }
 
   .submit-btn {
     height: 2.6em;
+    border-radius: 1em;
+  }
+
+  footer {
+    padding: 5em 0;
   }
 
   footer > h1 {
-    font-size: 2em;
+    font-size: 1.5em;
   }
 }
